# hedging-engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
benches/: latency_bench.rs  orderbook_bench.rs  queue_bench.rs  spark_spread_bench.rs  stress_test.rs
data/: sample_ticks.csv
docs/: ARCHITECTURE.md  BENCHMARKS.md  USAGE.md
examples/: backtest.rs  live_demo.rs  network_feed.rs  queue_performance.rs  simple_hedge.rs  spark_spread_demo.rs  throughput_test.rs
scripts/: benchmark.sh
src/: lib.rs  main.rs
src/hedging/: config.rs  delta.rs  engine.rs  mean_reversion.rs  mod.rs  mvhr.rs  spark_spread.rs
src/market_data/: mod.rs  orderbook.rs  tick.rs
src/network/: dpdk_wrapper.rs  mod.rs  tcp_stream.rs
src/strategy/: mod.rs
src/utils/: lockfree_queue.rs  metrics.rs  mod.rs  timestamp.rs
tests/: integration_tests.rs
